--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28",
     "jest-environment-jsdom": "^29.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "lefthook": "^1.1.1",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
