--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
+    "lint": "npm run lint:eslint && npm run lint:stylelint",
+    "lint:eslint": "eslint .",
+    "lint:stylelint": "stylelint \"**/*.scss\"",
     "format": "prettier --write .",
     "test": "jest ./"
   },
