--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,18 +11,19 @@
     "test": "jest ./"
   },
   "dependencies": {
+    "axios": "1.2.0",
+    "classnames": "2.3.2",
+    "compose-function": "3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router": "6.4.3",
-    "react-router-dom": "6.4.3",
-    "compose-function": "3.0.3",
-    "classnames": "2.3.2"
+    "react-router-dom": "6.4.3"
   },
   "devDependencies": {
     "@testing-library/react": "13.3.0",
+    "@types/compose-function": "0.0.30",
     "@types/jest": "28.1.8",
     "@types/react": "18.0.17",
-    "@types/compose-function": "0.0.30",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
@@ -36,9 +37,9 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "identity-obj-proxy": "3.0.0",
     "jest": "28",
     "jest-environment-jsdom": "29.0.1",
-    "identity-obj-proxy": "3.0.0",
     "lefthook": "1.1.1",
     "prettier": "2.7.1",
     "sass": "1.56.1",
@@ -50,6 +51,7 @@
     "stylelint-order": "5.0.0",
     "ts-jest": "28.0.8",
     "typescript": "4.8.2",
+    "typescript-plugin-css-modules": "3.4.0",
     "vite": "3.0.7",
     "vite-tsconfig-paths": "3.6.0"
   },
