--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -7,6 +7,9 @@
       "DOM.Iterable",
       "ESNext"
     ],
+    "plugins": [{
+      "name": "typescript-plugin-css-modules"
+    }],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
