add api for profile changes

--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -27,7 +27,11 @@
     "import/no-default-export": "error",
     "import/prefer-default-export": "off",
     "import/no-named-as-default-member": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["**/*.test.ts", "**/*.test.tsx"]}]
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": [
+      "**/*.test.ts",
+      "**/*.test.tsx",
+      "**/*.config.ts"
+    ]}]
   },
   "settings": {
     "react": {
