--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -30,7 +30,8 @@
     "import/no-extraneous-dependencies": ["error", {"devDependencies": [
       "**/*.test.ts",
       "**/*.test.tsx",
-      "**/*.config.ts"
+      "**/*.config.ts",
+      "**/*.config.js"
     ]}]
   },
   "settings": {
