--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "test": "jest ./ --passWithNoTests"
   },
   "dependencies": {
+    "axios": "1.2.0",
     "classnames": "2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
