--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
-    "eslint-plugin-react-hooks": "4.6.0", 
+    "eslint-plugin-react-hooks": "4.6.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "28",
     "jest-environment-jsdom": "29.0.1",
@@ -55,6 +55,7 @@
     "typescript": "4.8.2",
     "typescript-plugin-css-modules": "3.4.0",
     "vite": "3.0.7",
+    "vite-plugin-environment": "1.1.3",
     "vite-tsconfig-paths": "3.6.0"
   },
   "license": "MIT"
