Change folders structure, fix css

--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -27,12 +27,17 @@
     "import/no-default-export": "error",
     "import/prefer-default-export": "off",
     "import/no-named-as-default-member": "off",
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": [
-      "**/*.test.ts",
-      "**/*.test.tsx",
-      "**/*.config.ts",
-      "**/*.config.js"
-    ]}]
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": [
+          "**/*.test.ts",
+          "**/*.test.tsx",
+          "**/*.config.ts",
+          "**/*.config.js"
+        ]
+      }
+    ]
   },
   "settings": {
     "react": {
