--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -50,6 +50,7 @@
     "ts-jest": "28.0.8",
     "typescript": "4.8.2",
     "vite": "3.0.7",
+    "vite-plugin-svgr": "2.2.2",
     "vite-tsconfig-paths": "3.6.0"
   },
   "license": "MIT"
