--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,10 +13,12 @@
     "test": "jest ./ --passWithNoTests"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.9.1",
     "axios": "1.2.0",
     "classnames": "2.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.5"
   },
   "devDependencies": {
     "@testing-library/react": "13.3.0",
