--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "28.1.8",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/redux-logger": "3.0.9",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
     "@vitejs/plugin-react": "2.0.1",
@@ -42,6 +43,7 @@
     "jest-environment-jsdom": "29.0.1",
     "lefthook": "1.1.1",
     "prettier": "2.7.1",
+    "redux-logger": "3.0.6",
     "sass": "1.56.1",
     "stylelint": "14.13.0",
     "stylelint-config-clean-order": "0.9.0",
