--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,7 +16,8 @@
     "axios": "1.2.0",
     "classnames": "2.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
     "@testing-library/react": "13.3.0",
