--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,10 +16,11 @@
     "@reduxjs/toolkit": "1.9.1",
     "axios": "1.2.0",
     "classnames": "2.3.2",
+    "framer-motion": "^7.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.5.0",
-    "react-redux": "8.0.5"
+    "react-redux": "8.0.5",
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
     "@testing-library/react": "13.3.0",
