--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 MODE=development
-APP_URL=http://localhost
+APP_URL=http://zaripof4.beget.tech
 CLIENT_PORT=3000
 SERVER_PORT=3001
 POSTGRES_USER=postgres
