--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "private": true,
   "scripts": {
     "bootstrap": "yarn && node init.js && lerna clean && yarn && lerna bootstrap",
-    "build": "lerna run build",
-    "dev:client": "lerna run dev  --scope=client",
+    "link:client": "cd packages/client && yarn link && cd ../server && yarn link \"client\"",
+    "build": "yarn link:client && lerna run build",
+    "dev:client": "lerna run dev --scope=client",
     "dev:server": "lerna run dev --scope=server",
-    "dev": "lerna run dev",
+    "dev": "lerna run dev --parallel",
     "test": "lerna run test",
+    "serve": "yarn build && lerna run preview --scope=server --parallel",
     "lint": "lerna run lint",
     "format": "lerna run format",
     "preview": "lerna run preview"
