--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development vite",
     "build:client": "cross-env NODE_ENV=production tsc && vite build --config vite.config.ts",
     "build:ssr": "cross-env NODE_ENV=production tsc && vite build --config vite-ssr.config.ts",
-    "build": "rm -rf ./dist && yarn build:client && yarn build:ssr",
+    "build": "rimraf ./dist && yarn build:client && yarn build:ssr",
     "preview": "vite preview",
     "lint": "npm run lint:eslint && npm run lint:stylelint",
     "lint:eslint": "eslint .",
@@ -49,6 +49,7 @@
     "lefthook": "1.1.1",
     "prettier": "2.7.1",
     "redux-logger": "3.0.6",
+    "rimraf": "4.1.1",
     "sass": "1.56.1",
     "stylelint": "14.13.0",
     "stylelint-config-clean-order": "0.9.0",
