--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,16 @@
 MODE=development
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:3001
+BASE_URL=https://ya-praktikum.tech/api/v2
 CLIENT_PORT=3000
 SERVER_PORT=3001
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
-BASE_URL=https://ya-praktikum.tech/api/v2
+
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_LISTEN_PORT=80
+
 TEAM_NAME="20-cringe"
