--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "pg": "8.8.0",
     "sequelize": "6.28.0",
     "sequelize-typescript": "2.1.5",
+    "body-parser": "1.20.1",
     "client": "0.0.0"
   },
   "devDependencies": {
