--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 MODE=development
 APP_URL=http://localhost:3001
+API_URL=http://localhost:3001/api
 BASE_URL=https://ya-praktikum.tech/api/v2
 CLIENT_PORT=3000
 SERVER_PORT=3001
