--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.5",
-    "react-router-dom": "6.5.0"
+    "react-router-dom": "6.5.0",
+    "emoji-picker-react": "4.4.7"
   },
   "devDependencies": {
     "@testing-library/react": "13.3.0",
