--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -8,9 +8,23 @@ http {
         listen [::]:80;
 
         location / {
-            root /app;
-            try_files $uri /index.html;
-            add_header Access-Control-Allow-Origin *;
+           proxy_set_header      Host $host;
+           proxy_set_header      X-Real-IP $http_x_real_ip;
+           proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_pass            http://84.201.165.255:3001;
+           proxy_set_header      X-Forwarded-Proto $scheme;
+           proxy_set_header      Cache-Control no-cache;
+
+           client_max_body_size  128m;
+
+           add_header            Last-Modified $date_gmt;
+           add_header            Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age = 0';
+
+           if_modified_since     off;
+           expires               off;
+           etag                  off;
+
+           add_header X-App-Env  testing;
         }
     }
 }
