--- a/packages/server/nginx.conf
+++ b/packages/server/nginx.conf
@@ -7,6 +7,10 @@ http {
         listen 80;
         listen [::]:80;
 
+        server_name tamagotchi-practicum.ru;
+        server_name 127.0.0.1;
+        server_name localhost;
+
         location / {
            proxy_set_header      Host $host;
            proxy_set_header      X-Real-IP $http_x_real_ip;
@@ -24,6 +28,7 @@ http {
            expires               off;
            etag                  off;
 
+           try_files $uri /index.html;
            add_header X-App-Env  testing;
         }
     }
