--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -30,3 +30,17 @@ RUN sed -i 's/"client": "0.0.0"/"client": "file:.\/client"/g' /app/package.json 
 
 EXPOSE $SERVER_PORT
 CMD [ "node", "/app/index.js" ]
+
+FROM nginx:alpine
+
+#!/bin/sh
+
+## Remove default nginx index page
+RUN rm -rf /usr/share/nginx/html/*
+
+COPY --from=builder /app/packages/server/nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /app/packages/client/ /usr/share/nginx/html
+
+EXPOSE $SERVER_PORT 80
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
