--- a/packages/server/nginx.conf
+++ b/packages/server/nginx.conf
@@ -1,32 +1,46 @@
 events {
 }
 
+# http {
+#     include mime.types;
+#     server {
+#         listen [::]:80;
+#
+#         server_name tamagotchi-practicum.ru;
+#
+#         location / {
+#            proxy_set_header      Host $host;
+#            proxy_set_header      X-Real-IP $http_x_real_ip;
+#            proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+#            proxy_pass            http://84.201.165.255:3001;
+#            proxy_set_header      X-Forwarded-Proto $scheme;
+#            proxy_set_header      Cache-Control no-cache;
+#
+#            client_max_body_size  128m;
+#
+#            add_header            Last-Modified $date_gmt;
+#            add_header            Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age = 0';
+#
+#            if_modified_since     off;
+#            expires               off;
+#            etag                  off;
+#
+#            try_files $uri /index.html;
+#            add_header X-App-Env  testing;
+#         }
+#     }
+# }
+
 http {
     include mime.types;
     server {
+        listen 80;
         listen [::]:80;
 
-        server_name tamagotchi-practicum.ru;
-
         location / {
-           proxy_set_header      Host $host;
-           proxy_set_header      X-Real-IP $http_x_real_ip;
-           proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_pass            http://84.201.165.255:3001;
-           proxy_set_header      X-Forwarded-Proto $scheme;
-           proxy_set_header      Cache-Control no-cache;
-
-           client_max_body_size  128m;
-
-           add_header            Last-Modified $date_gmt;
-           add_header            Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age = 0';
-
-           if_modified_since     off;
-           expires               off;
-           etag                  off;
-
-           try_files $uri /index.html;
-           add_header X-App-Env  testing;
+            root /app;
+            try_files $uri /index.html;
+            add_header Access-Control-Allow-Origin *;
         }
     }
 }
