--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -38,9 +38,10 @@ http {
         listen [::]:80;
 
         location / {
-            root /app;
-            try_files $uri /index.html;
-            add_header Access-Control-Allow-Origin *;
+            proxy_pass 84.201.165.255:3001;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
         }
     }
 }
