--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "test": "jest ."
   },
   "dependencies": {
+    "client": "0.0.0",
     "cors": "2.8.5",
     "dotenv": "16.0.2",
     "express": "4.18.1",
@@ -18,7 +19,7 @@
     "sequelize": "6.28.0",
     "sequelize-typescript": "2.1.5",
     "body-parser": "1.20.1",
-    "client": "0.0.0"
+    "vite": "4.1.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
