--- a/Dockerfile.ngnx
+++ b/Dockerfile.ngnx
@@ -1,6 +1,19 @@
-FROM nginx:latest as production
+ARG NODE_VERSION=16
+ARG CLIENT_PORT=3000
 
-RUN rm -rf /etc/nginx/conf.d/default.conf
+FROM node:$NODE_VERSION-buster as base
+
+WORKDIR /app
+
+FROM base as builder
+
+COPY package.json yarn.lock
+RUN yarn install --frozen-lockfile
+
+COPY . .
+
+FROM nginx:latest as production
+WORKDIR /app
 
 COPY --from=builder /app/packages/client/nginx.conf /etc/nginx/nginx.conf
 
