--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         SERVER_PORT: ${SERVER_PORT}
     restart: always
     ports:
-      - "${SERVER_PORT}:${SERVER_PORT}"
+      - "80:${SERVER_PORT}"
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -59,15 +59,6 @@ services:
       - tamagotchi_connect
     command:
       - "sudo chown -R 8080:80 /var/lib/pgadmin"
-
-  nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.ngnx
-    ports:
-      - '80:80'
-    depends_on:
-      - server
 
 volumes:
   pgadmin-data:
