--- a/nginx.conf
+++ b/nginx.conf
@@ -32,16 +32,15 @@ events {
 # }
 
 http {
-    include mime.types;
     server {
         listen 80;
-        listen [::]:80;
+#         listen [::]:80;
 
         location / {
-            proxy_pass 84.201.165.255:3001;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header Host $http_host;
-            proxy_redirect off;
+            proxy_pass http://127.0.0.1:3001;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header Host $http_host;
+#             proxy_redirect off;
         }
     }
 }
