--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,6 @@ PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_LISTEN_PORT=80
 
 TEAM_NAME="20-cringe"
+
+DOMAIN="tamagotchi-practicum.ru"
+EMAIL="zaripovar1998@gmail.com"
