--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,24 @@
 version: "3.9"
 
 services:
-  server:
+  client:
+    container_name: tamagotchi-client
+    image: practicum-client
+    tty: true
+    build:
+      context: .
+      dockerfile: Dockerfile.client
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - tamagotchi_connect
+    depends_on:
+      - ssr
+      - certbot
+
+  ssr:
     container_name: tamagotchi-server
     image: practicum-server
     build:
@@ -11,7 +28,7 @@ services:
         SERVER_PORT: ${SERVER_PORT}
     restart: always
     ports:
-      - "80:${SERVER_PORT}"
+      - "${SERVER_PORT}:${SERVER_PORT}"
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -59,6 +76,19 @@ services:
       - tamagotchi_connect
     command:
       - "sudo chown -R 8080:80 /var/lib/pgadmin"
+
+  certbot:
+    container_name: certbot
+    image: certbot/certbot:latest
+    command: >-
+      certonly --reinstall --webroot --webroot-path=/var/www/certbot
+      --email ${EMAIL} --agree-tos --no-eff-email
+      -d ${DOMAIN}
+    volumes:
+      - ./etc/letsencrypt:/etc/letsencrypt
+      - ./certbot/data:/var/www/certbot
+    networks:
+      - tamagotchi_connect
 
 volumes:
   pgadmin-data:
