--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       context: .
       dockerfile: Dockerfile.client
     restart: always
+    volumes:
+      - /cert:/var/www/ssl
     ports:
       - "80:80"
       - "443:443"
@@ -76,19 +78,6 @@ services:
       - tamagotchi_connect
     command:
       - "sudo chown -R 8080:80 /var/lib/pgadmin"
-
-  certbot:
-    container_name: certbot
-    image: certbot/certbot:latest
-    command: >-
-      certonly --reinstall --webroot --webroot-path=/var/www/certbot
-      --email ${EMAIL} --agree-tos --no-eff-email
-      -d ${DOMAIN}
-    volumes:
-      - ./etc/letsencrypt:/etc/letsencrypt
-      - ./certbot/data:/var/www/certbot
-    networks:
-      - tamagotchi_connect
 
 volumes:
   pgadmin-data:
