--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -21,8 +21,10 @@ http {
         listen [::]:443 ssl http2;
         listen 443 ssl http2;
 
-        ssl_certificate /var/www/certbot/fullchain.pem;
-        ssl_certificate_key /var/www/certbot/privkey.pem;
+        server_name tamagotchi-practicum.ru;
+
+        ssl_certificate /var/www/ssl/tamagotchi-practicum.ru.crt;
+        ssl_certificate_key /var/www/ssl/tamagotchi-practicum.ru.key;
 
 #         root /var/www/html;
 #         index index.php index.html index.htm;
