--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -2,6 +2,7 @@ events {
 }
 
 http {
+    include mime.types;
     server_tokens off;
     charset utf-8;
 
@@ -11,8 +12,6 @@ http {
         listen 80;
 
         location / {
-#                 rewrite ^ https://$host$request_uri? permanent;
-
             return 301 https://$host$request_uri;
         }
     }
