add test overlapping

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -15,7 +15,7 @@ COPY . .
 RUN yarn bootstrap \
     && rm -rf /app/packages/server/dist/ \
     && rm -rf /app/packages/client/dist/ \
-    && yarn build:docker
+    && yarn docker:build
 
 FROM node:$NODE_VERSION-buster-slim as production
 WORKDIR /app
