--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "bootstrap": "yarn && node init.js && lerna clean --yes && yarn && lerna bootstrap",
     "link:client": "cd packages/client && yarn link && cd ../server && yarn link \"client\"",
     "build": "yarn link:client && lerna run build",
-    "build:docker": "lerna run build",
     "dev:client": "lerna run dev --scope=client",
     "dev:server": "lerna run dev --scope=server",
     "dev": "lerna run dev --parallel",
@@ -13,7 +12,8 @@
     "serve": "yarn build && lerna run preview --scope=server --parallel",
     "lint": "lerna run lint",
     "format": "lerna run format",
-    "preview": "lerna run preview"
+    "preview": "lerna run preview",
+    "docker:build": "lerna run build"
   },
   "license": "MIT",
   "workspaces": [
