add test overlapping

--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -3,13 +3,13 @@ events {
 
 http {
     include mime.types;
-    server_tokens off;
-    charset utf-8;
 
     # always redirect to https
     server {
         listen [::]:80;
         listen 80;
+
+        server_name tamagotchi-practicum.ru;
 
         location / {
             return 301 https://$host$request_uri;
