--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -35,7 +35,7 @@ http {
         }
 
         location /assets {
-          root /app;
+          root /app/client;
           add_header Access-Control-Allow-Origin *;
           add_header Cache-Control no-cache;
           expires 0;
