--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,14 +11,15 @@
     "test": "jest ."
   },
   "dependencies": {
+    "body-parser": "1.20.1",
+    "client": "0.0.0",
     "cors": "2.8.5",
     "dotenv": "16.0.2",
     "express": "4.18.1",
+    "http-proxy-middleware": "^2.0.6",
     "pg": "8.8.0",
     "sequelize": "6.28.0",
-    "sequelize-typescript": "2.1.5",
-    "body-parser": "1.20.1",
-    "client": "0.0.0"
+    "sequelize-typescript": "2.1.5"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
